src/objects/Mitigation__c.object
<CustomObject>
    <description>Milliman Mitigations custom object</description>
    <fields>
        <fullName>Additional_Expense__c</fullName>
        <inlineHelpText>Enter any Additional Expense needed for this Mitigation</inlineHelpText>
        <label>Additional Expense</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_Mitigation_Cost__c</fullName>
        <formula>Internal_Labor_Cost__c + Additional_Expense__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Internal Labor Cost + Additional Expense</inlineHelpText>
        <label>Annual Mitigation Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>App_name__c</fullName>
        <label>Organization Name</label>
        <picklist>
            <picklistValues>
                <fullName>Physicians Insurance A Mutual Company</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Complete__c</fullName>
        <inlineHelpText>Enter the assessed % value to completeness for this mitigation</inlineHelpText>
        <label>%Complete</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Control_process_detail__c</fullName>
        <label>Control Process Detail</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Cost_Detail_Explanation__c</fullName>
        <inlineHelpText>Enter the detail explanation for the Cost</inlineHelpText>
        <label>Cost Detail Explanation</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Date_Completed__c</fullName>
        <inlineHelpText>Actual date this mitigation was completed</inlineHelpText>
        <label>Date Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <inlineHelpText>Date this mitigation is due to be in effect</inlineHelpText>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Internal_Labor_Cost__c</fullName>
        <formula>Internal_Labor_Hours__c * Internal_Labor_Cost_per_Hour__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Internal Labor Hours * Internal Labor Cost per Hour</inlineHelpText>
        <label>Internal Labor Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Internal_Labor_Cost_per_Hour__c</fullName>
        <inlineHelpText>Enter the Internal Labor Cost per Hour for the labor required for this Mitigation</inlineHelpText>
        <label>Internal Labor Cost per Hour</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Internal_Labor_Hours__c</fullName>
        <inlineHelpText>Enter the Internal Labor Hours that are needed for this Mitigation</inlineHelpText>
        <label>Internal Labor Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mitigation_Category__c</fullName>
        <inlineHelpText>Select the category for this Mitigation</inlineHelpText>
        <label>Mitigation Category</label>
        <picklist>
            <picklistValues>
                <fullName>Eliminate, Avoid or Withdraw from the Risk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reduce the Risk to an Optimal or Acceptable Level</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Share, Transfer, Outsource or Insure the Risk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retention of the Risk through Acceptance and Budget</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mitigation_Description__c</fullName>
        <inlineHelpText>Description of this Mitigation</inlineHelpText>
        <label>Mitigation Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Mitigation_Owner__c</fullName>
        <label>Mitigation Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mitigation_Status_Detail_Explanation__c</fullName>
        <inlineHelpText>Please enter the detail explanation for the Status</inlineHelpText>
        <label>Mitigation Status Detail Explanation</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Mitigation_Status__c</fullName>
        <inlineHelpText>Select the current status for this mitigation</inlineHelpText>
        <label>Mitigation Status</label>
        <picklist>
            <picklistValues>
                <fullName>Under Consideration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deferred</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ongoing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mitigation_Type__c</fullName>
        <label>Mitigation Type</label>
        <picklist>
            <picklistValues>
                <fullName>Existing control</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Action plan</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ongoing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ongoing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Organization_Category__c</fullName>
        <inlineHelpText>Select the Organization Category</inlineHelpText>
        <label>Organization Category</label>
        <picklist>
            <picklistValues>
                <fullName>Information Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ventures</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Investment Mgmt.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Holdings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sponsor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>The Resource Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Mission</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Smart Health</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Parent_Category__c</fullName>
        <inlineHelpText>Select the Mitigation Parent Category</inlineHelpText>
        <label>Parent Category</label>
        <picklist>
            <picklistValues>
                <fullName>External Environment/Customer/Stakeholder Mitigations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Mitigations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance Related Mitigations - Marketing Mitigations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance Related Mitigations - Underwriting Mitigations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal Environment/Human Resources/Employee Mitigations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operational Mitigations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strategic Mitigations</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Mitigation_</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Mitigation_Category__c</columns>
        <columns>Mitigation_Status__c</columns>
        <columns>Annual_Mitigation_Cost__c</columns>
        <columns>Complete__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Mitigations</fullName>
        <columns>NAME</columns>
        <columns>Mitigation_Description__c</columns>
        <columns>Mitigation_Owner__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Mitigation__c.Mitigation</value>
        </filters>
        <label>Mitigations</label>
    </listViews>
    <listViews>
        <fullName>R_D</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Mitigation__c.R_D</value>
        </filters>
        <label>R&amp;D</label>
    </listViews>
    <nameField>
        <label>Mitigation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mitigations</pluralLabel>
    <recordTypes>
        <fullName>Mitigation</fullName>
        <active>true</active>
        <label>Mitigation</label>
    </recordTypes>
    <recordTypes>
        <fullName>Physicians_Insurance_A_Mutual_Company</fullName>
        <active>true</active>
        <label>Physicians Insurance A Mutual Company</label>
    </recordTypes>
    <recordTypes>
        <fullName>R_D</fullName>
        <active>true</active>
        <label>R&amp;D</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>